--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,10 @@
 
     <div class='main-content'>
         {{>header}}
+        <p> This site was created by Mohit Tulsani. It uses data from <span class="url">mapbox.com</span> and
+            <span class="url">weatherstack.com</span>. It makes use of these third party APIs to fetch the
+            weather forecast for a particular location.
+        </p>
     </div>
 
     {{>footer}}
