--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -10,7 +10,7 @@
 
     <div class="main-content">
         {{>header}}
-        <p>Help Message: {{message}}</p>
+        <p>{{message}}</p>
     </div>
 
     {{>footer}}
