--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -10,7 +10,7 @@
 
     <div class="main-content">
         {{>header}}
-        <P>Use this website to find the weather of your location.</P>
+        <P>Use this application to find the weather of your location.</P>
 
         <form>
             <input placeholder="Location">
